--- a/index.html
+++ b/index.html
@@ -4,21 +4,30 @@
         <meta charset="UTF-8">
         <meta name="description" content="提供綜合咖啡與健康有機食物的咖啡店">
         <title>WCB CaFe</title>
-        <link rel="stylesheet" href="/main.scss">
+        <link rel="stylesheet" href="/style.css">
         <!-- css重置  消除瀏覽器原本套用的 CSS，就算用不同瀏覽器檢視，也能統一顯示的效果-->
         <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+        <link rel="icon" type="image/png" href="/images/favicon.png">
     </head>
     <body>
-        <header class="page-header">
-            <h1><a href="index.html"><img class="logo" src="./images/logo.svg" alt="Web Cafe首頁"></a></h1>
-            <nav>
-                <ul class="main-nav">
-                    <li><a href="news.html">News</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+        <div id="home" class="big-bg">
+            <header class="page-header wrapper">
+                <h1><a href="index.html"><img class="logo" src="./images/logo.svg" alt="Web Cafe首頁"></a></h1>
+                <nav>
+                    <ul class="main-nav">
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="home-content wrapper">
+                <h2 class="page-title">We'll Make Your Day</h2>
+                <p>想不想待在時尚咖啡店裡放鬆身心? 用無人工添加物的食材讓身體由內而外煥然一新</p>
+                <a class="button" href="menu.html">菜單介紹</a>
+            </div> <!--home-content-->
+        </div><!--#home-->
+
     </body>
 </html>
