--- a/menu.html
+++ b/menu.html
@@ -3,22 +3,77 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="提供綜合咖啡與健康有機食物的咖啡店">
-        <title>WCB CaFe</title>
-        <link rel="stylesheet" href="/main.scss">
+        <meta name="viewport" content="width = device-width, initial-scale=1">
+        <title>WCB CaFe - MENU</title>
+        <link rel="stylesheet" href="/style.css">
         <!-- css重置  消除瀏覽器原本套用的 CSS，就算用不同瀏覽器檢視，也能統一顯示的效果-->
         <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+        <link rel="icon" type="image/png" href="/images/favicon.png">
     </head>
     <body>
-        <header class="page-header">
-            <h1><a href="index.html"><img class="logo" src="" alt="menu"></a></h1>
-            <nav>
-                <ul class="main-nav">
-                    <li><a href="news.html">News</a></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </nav>
-        </header>
+        <div id="menu" class="big-bg">
+            <header class="page-header wrapper">
+                <h1><a href="index.html"><img class="logo" src="./images/logo.svg" alt="Web Cafe首頁"></a></h1>
+                <nav>
+                    <ul class="main-nav">
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="menu-content wrapper">
+                <h2 class="page-title">Menu</h2>
+                <p>
+                    WCB CAFE 提供有益健康的自然食物，主要的特色是菜單選用了無人工添加物的食材。
+                    請用好喝的綜合咖啡與健康的有機食物由體內開始療癒身心。
+                </p>
+            </div><!-- /.menu-content -->
+        </div><!--#home-->
+        <div class="wrapper grid">
+            <div class="item big-box">
+                <img src="/images/menu1.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu2.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu3.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu4.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu5.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu6.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu7.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu8.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+            <div class="item">
+                <img src="/images/menu9.jpg" alt="">
+                <p>照片說明照片說明照片說明照片說明</p>
+            </div>
+        </div><!-- /.grid -->
+        <footer>
+            <div class="wrapper">
+                <p><small>&copy; 2019 Manabox</small></p><!--&copy;版權符號-->
+            </div>
+        </footer>
+
     </body>
 </html>
