--- a/contact.html
+++ b/contact.html
@@ -3,22 +3,68 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="提供綜合咖啡與健康有機食物的咖啡店">
-        <title>WCB CaFe</title>
-        <link rel="stylesheet" href="/main.scss">
+        <meta name="viewport" content="width = device-width, initial-scale=1">
+        <title>WCB CaFe - CONTACT</title>
+        <link rel="stylesheet" href="/style.css">
         <!-- css重置  消除瀏覽器原本套用的 CSS，就算用不同瀏覽器檢視，也能統一顯示的效果-->
         <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+        <link rel="icon" type="image/png" href="/images/favicon.png">
     </head>
     <body>
-        <header class="page-header">
-            <h1><a href="index.html"><img class="logo" src="" alt="Contact"></a></h1>
-            <nav>
-                <ul class="main-nav">
-                    <li><a href="news.html">News</a></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </nav>
-        </header>
+        <div id="contact" class="big-bg">
+            <header class="page-header wrapper">
+                <h1><a href="index.html"><img class="logo" src="./images/logo.svg" alt="Web Cafe首頁"></a></h1>
+                <nav>
+                    <ul class="main-nav">
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="wrapper">
+                <h2 class="page-title">Contact</h2>
+                <form action="#">
+                    <div>
+                        <label for="name">姓名</label>
+                        <input type="text" id="name" name="your-name">
+                    </div>
+                    <div>
+                        <label for="email">電子郵件</label>
+                        <input type="email" id="email" name="your-email">
+                    </div>
+                    <div>
+                        <label for="message">詢問內容</label>
+                        <textarea id="message" name="your-message"></textarea>
+                    </div>
+                    <input type="submit" class="button" value="送出">
+                </form>
+            </div>
+        </div><!--#contact-->
+        <section id="location">
+            <div class="wrapper">
+                <div class="location-info">
+                    <h3 class="sub-title">Cafe 東站前店</h3>
+                    <p>
+                        地址 : 東京都OO區<br>
+                        OOOOOOO 000-22-1<br>
+                        OOOOO<br>
+                        電話 : 03-1111-1111<br>
+                        營業時間 : 10:00 ~ 20:00<br>
+                        公休日 : 星期三
+                    </p>
+                </div> <!-- /.location-info -->
+                <div class="location-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d910.2833281045799!2d120.67970015108581!3d24.131955965096274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693dd334e24df5%3A0x4a7095304a97d70b!2z5byY54i65ryi5aChLeWTgeWJteW6lw!5e0!3m2!1szh-TW!2stw!4v1712846733945!5m2!1szh-TW!2stw" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div> <!-- /.location-map -->
+            </div><!-- /.wrapper -->
+        </section><!-- /#loaction-->
+        <footer>
+            <div class="wrapper">
+                <p><small>&copy; 2019 Manabox</small></p><!--&copy;版權符號-->
+            </div>
+        </footer>
+
     </body>
 </html>
